// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewLetterOfCredit calls onSubmit with the right information 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -50,11 +50,11 @@
                  form=\\"[object Object]\\"
                  id=\\"field_issuingBankReference\\"
                  name=\\"issuingBankReference\\"
                  tabindex=\\"3\\"
                  type=\\"text\\"
-                 value=\\"REF-0001\\"
+                 value=\\"MyRef\\"
                />
              </div>
            </div>
            <div
              style=\\"font-size: small; line-height: 0px; padding-bottom: 24px;\\"
@@ -238,11 +238,11 @@
                />
                <div
                  class=\\"field\\"
                >
                  <div
-                   class=\\"ui radio checkbox\\"
+                   class=\\"ui checked radio checkbox\\"
                    data-test-id=\\"reviewDecision_ISSUE_SBLC\\"
                  >
                    <input
                      class=\\"hidden\\"
                      readonly=\\"\\"
@@ -275,16 +275,14 @@
                  </div>
                </div>
              </div>
            </div>
            <button
-             class=\\"ui primary disabled button\\"
+             class=\\"ui primary button\\"
              data-test-id=\\"submit-letter-of-credit-review\\"
-             disabled=\\"\\"
              role=\\"button\\"
              style=\\"width: 100%; margin-top: auto;\\"
-             tabindex=\\"-1\\"
              type=\\"submit\\"
            >
              Send
            </button>
          </form>
@@ -350,11 +348,11 @@
            class=\\"sc-cvbbAY gFTpMg\\"
          >
            <div
              autocorrect=\\"on\\"
              data-gramm=\\"false\\"
-             data-key=\\"48\\"
+             data-key=\\"132\\"
              data-slate-editor=\\"true\\"
              spellcheck=\\"true\\"
              style=\\"outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;\\"
            />
          </div>"
`;

exports[`ViewLetterOfCredit matches snapshot when we are applicant 1`] = `
<DocumentFragment>
  <h1
    class="ui header"
    style="padding: 24px; margin: 0px;"
  >
    LC-ING-1234
  </h1>
  .c9 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c10 {
  margin-left: auto;
}

.c11 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

.c3.c3.c3.c3 {
  border: 0;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.c3.c3.c3:hover,
.c3.c3.c3.c3:active,
.c3.c3.c3.c3:visited,
.c3.c3.c3.c3:focus {
  box-shadow: none !important;
}

.c6 {
  padding: 0;
  margin: 8px;
}

.c5 {
  font-weight: bold;
  text-align: left;
  padding-right: 20px;
}

.c4 {
  padding: 30px 0px 30px 0px;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-row-gap: 8px;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c7 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          style="display: flex; justify-content: space-between; padding-top: 24px;"
        >
          <div
            class="ui header"
          >
            Application summary
          </div>
        </div>
        <br />
        <a
          class="c3"
          href="/letters-of-credit/1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c/trade"
          target="_blank"
        >
          View trade details
        </a>
        <div
          class="c4"
        >
          <span
            class="c5"
          >
            Status
          </span>
          <span
            data-test-id="status"
          >
            Requested
          </span>
          <span
            class="c5"
          >
            Reference
          </span>
          <span
            data-test-id="reference"
          >
            LC-ING-1234
          </span>
          <span
            class="c5"
          >
            Expiry date
          </span>
          <span
            data-test-id="expire-date"
          >
            2019-11-29
          </span>
          <span
            class="c5"
          >
            Amount
          </span>
          <span
            data-test-id="amount"
          >
            <span
              data-test-id="amount-currency"
            >
              USD
            </span>
             
            <span
              data-test-id="amount-price"
            >
              10,000.00
            </span>
          </span>
          <span
            class="c5"
          />
          <div
            class="c6"
          />
          <span
            class="c5"
          >
            Applicant
          </span>
          <span
            data-test-id="applicant"
          >
            Applicant Name
          </span>
          <span
            class="c5"
          >
            Beneficiary
          </span>
          <span
            data-test-id="beneficiary"
          >
            Beneficiary Name
          </span>
          <span
            class="c5"
          >
            Issuing bank
          </span>
          <span
            data-test-id="issuingbank"
          >
            Issuing Name
          </span>
          <span
            class="c5"
          >
            Issuing bank ref.
          </span>
          <span
            data-test-id="issuing-bank-reference"
          >
            REF-0001
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7"
      height="80px"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui disabled fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  disabled=""
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c11"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="0"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ViewLetterOfCredit matches snapshot when we are issuing bank 1`] = `
<DocumentFragment>
  <h1
    class="ui header"
    style="padding: 24px; margin: 0px;"
  >
    LC-ING-1234
  </h1>
  .c12 {
  background: rgba(148,109,192,0.4);
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  text-transform: uppercase;
}

.c9 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c10 {
  margin-left: auto;
}

.c11 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

.c3.c3.c3.c3 {
  border: 0;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.c3.c3.c3:hover,
.c3.c3.c3.c3:active,
.c3.c3.c3.c3:visited,
.c3.c3.c3.c3:focus {
  box-shadow: none !important;
}

.c6 {
  padding: 0;
  margin: 8px;
}

.c5 {
  font-weight: bold;
  text-align: left;
  padding-right: 20px;
}

.c4 {
  padding: 30px 0px 30px 0px;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-row-gap: 8px;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c7 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          style="display: flex; justify-content: space-between; padding-top: 24px;"
        >
          <div
            class="ui header"
          >
            Application summary
          </div>
        </div>
        <br />
        <a
          class="c3"
          href="/letters-of-credit/1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c/trade"
          target="_blank"
        >
          View trade details
        </a>
        <div
          class="c4"
        >
          <span
            class="c5"
          >
            Status
          </span>
          <span
            data-test-id="status"
          >
            Issued
          </span>
          <span
            class="c5"
          >
            Reference
          </span>
          <span
            data-test-id="reference"
          >
            LC-ING-1234
          </span>
          <span
            class="c5"
          >
            Expiry date
          </span>
          <span
            data-test-id="expire-date"
          >
            2019-11-29
          </span>
          <span
            class="c5"
          >
            Amount
          </span>
          <span
            data-test-id="amount"
          >
            <span
              data-test-id="amount-currency"
            >
              USD
            </span>
             
            <span
              data-test-id="amount-price"
            >
              10,000.00
            </span>
          </span>
          <span
            class="c5"
          />
          <div
            class="c6"
          />
          <span
            class="c5"
          >
            Applicant
          </span>
          <span
            data-test-id="applicant"
          >
            Applicant Name
          </span>
          <span
            class="c5"
          >
            Beneficiary
          </span>
          <span
            data-test-id="beneficiary"
          >
            Beneficiary Name
          </span>
          <span
            class="c5"
          >
            Issuing bank
          </span>
          <span
            data-test-id="issuingbank"
          >
            Issuing Name
          </span>
          <span
            class="c5"
          >
            Issuing bank ref.
          </span>
          <span
            data-test-id="issuing-bank-reference"
          >
            REF-0001
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7"
      height="80px"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
            </span>
          </div>
          <div
            class="c10"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui disabled fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  disabled=""
                  readonly=""
                  tabindex="-1"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c11"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="6"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          >
            <div
              data-key="7"
              data-slate-object="block"
              style="position: relative;"
            >
              <span
                data-key="8"
                data-slate-object="text"
              >
                <span
                  data-offset-key="8:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    some text 
                  </span>
                </span>
              </span>
              <span
                data-key="9"
                data-slate-void="true"
              >
                <span>
                  <var
                    class="c12"
                    data-key="9"
                    data-slate-object="inline"
                    data-test-id="var-trade.quantity"
                  >
                    600000
                  </var>
                </span>
              </span>
              <span
                data-key="11"
                data-slate-object="text"
              >
                <span
                  data-offset-key="11:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ViewLetterOfCredit matches snapshot when we are issuing bank and status is requested and there is a review to do 1`] = `
<DocumentFragment>
  <h1
    class="ui header"
    style="padding: 24px; margin: 0px;"
  >
    LC-ING-1234
  </h1>
  .c10 {
  background: rgba(148,109,192,0.4);
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  text-transform: uppercase;
}

.c7 {
  width: 100%;
  padding: 8px;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c8 {
  margin-left: auto;
}

.c9 {
  margin-top: 2px;
  padding: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  background-color: white;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
  height: 100%;
  width: 100%;
}

.c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

.c3.c3.c3.c3 {
  border: 0;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.c3.c3.c3:hover,
.c3.c3.c3.c3:active,
.c3.c3.c3.c3:visited,
.c3.c3.c3.c3:focus {
  box-shadow: none !important;
}

.c4 {
  font-size: small;
  color: #d45c64;
  margin-top: -1em;
  padding-top: 3px;
  min-height: 22px;
  margin-bottom: 9px;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c5 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          style="display: flex; justify-content: space-between; padding-top: 24px; padding-bottom: 24px;"
        >
          <div
            class="ui header"
          >
            Review application
          </div>
          <br />
          <a
            class="c3"
            href="/letters-of-credit/1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c/trade"
            target="_blank"
          >
            View trade details
          </a>
        </div>
        <form
          class="ui form"
          id="create-standby-letter-of-credit"
          style="display: flex; flex-direction: column; flex-grow: 1;"
        >
          <div
            class="field"
          >
            <label>
              Internal reference
            </label>
            <div
              class="ui input field error"
              data-test-id="issuingBankReference"
            >
              <input
                form="[object Object]"
                id="field_issuingBankReference"
                name="issuingBankReference"
                tabindex="3"
                type="text"
                value="REF-0001"
              />
            </div>
          </div>
          <div
            style="font-size: small; line-height: 0px; padding-bottom: 24px;"
          >
            The reference from your internal system
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <div
            class="field"
          >
            <label>
              Opening amount / Currency
            </label>
            <div
              class="ui right labeled input field error"
              data-test-id="amount"
            >
              <input
                id="field_amount"
                name="amount"
                tabindex="4"
                type="text"
                value="10,000.00"
              />
              <div
                aria-expanded="false"
                class="ui dropdown label"
                data-test-id="currency"
                name="currency"
                role="listbox"
                style="border: 1px solid rgb(226, 226, 226);"
                tabindex="0"
              >
                <div
                  aria-live="polite"
                  class="text"
                  role="alert"
                >
                  USD
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      AED
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      CHF
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      EUR
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      GBP
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      JPY
                    </span>
                  </div>
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      USD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <div
            class="field"
          >
            <label>
              Expiry date
            </label>
            <div
              class="field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              />
              <div
                class="ui input field error"
                data-test-id="expiryDate"
                style="width: 100%;"
              >
                <input
                  id="field_expiryDate"
                  min="2018-11-13"
                  name="expiryDate"
                  tabindex="5"
                  type="date"
                  value="2019-11-29"
                />
              </div>
            </div>
          </div>
          <div
            class="c4"
          >
            Field missing in template
          </div>
          <div
            class="field"
          >
            <label>
              Application decision
            </label>
            <div
              class="field"
            >
              <label
                id="field_reviewDecision"
              />
              <div
                class="field"
              >
                <div
                  class="ui radio checkbox"
                  data-test-id="reviewDecision_ISSUE_SBLC"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="6"
                    type="radio"
                    value=""
                  />
                  <label>
                    Issue SBLC
                  </label>
                </div>
              </div>
              <div
                class="field"
              >
                <div
                  class="ui radio checkbox"
                  data-test-id="reviewDecision_REJECT_APPLICATION"
                >
                  <input
                    class="hidden"
                    readonly=""
                    tabindex="6"
                    type="radio"
                    value=""
                  />
                  <label>
                    Reject application
                  </label>
                </div>
              </div>
            </div>
          </div>
          <button
            class="ui primary disabled button"
            data-test-id="submit-letter-of-credit-review"
            disabled=""
            role="button"
            style="width: 100%; margin-top: auto;"
            tabindex="-1"
            type="submit"
          >
            Send
          </button>
        </form>
      </div>
    </div>
    <div
      class="c5"
      height="80px"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            style="padding-left: 16px; color: rgb(212, 92, 100);"
          >
            <i
              aria-hidden="true"
              class="red warning sign icon"
            />
            <span
              style="padding-left: 16px;"
            >
              The template is missing 8 mandatory fields. 
              <span
                data-test-id="resolve-missing-fields"
                style="color: rgb(212, 92, 100); text-decoration: underline; cursor: pointer;"
              >
                Resolve
              </span>
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <div
                class="ui fitted toggle checkbox"
                data-test-id="button-mode"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="checkbox"
                  value=""
                />
                <label />
              </div>
              <label
                style="padding-right: 16px; padding-left: 16px;"
              >
                Edit mode
              </label>
            </div>
          </div>
        </div>
        <div
          class="c9"
        >
          <div
            autocorrect="on"
            data-gramm="false"
            data-key="27"
            data-slate-editor="true"
            spellcheck="true"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word; width: 100%; height: 100%; flex-grow: 1;"
          >
            <div
              data-key="28"
              data-slate-object="block"
              style="position: relative;"
            >
              <span
                data-key="29"
                data-slate-object="text"
              >
                <span
                  data-offset-key="29:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    some text 
                  </span>
                </span>
              </span>
              <span
                data-key="30"
                data-slate-void="true"
              >
                <span>
                  <var
                    class="c10"
                    data-key="30"
                    data-slate-object="inline"
                    data-test-id="var-trade.quantity"
                  >
                    600000
                  </var>
                </span>
              </span>
              <span
                data-key="32"
                data-slate-object="text"
              >
                <span
                  data-offset-key="32:0"
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                     
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ViewLetterOfCredit matches snapshot when we have a document overriding the letter of credit template 1`] = `
<DocumentFragment>
  <h1
    class="ui header"
    style="padding: 24px; margin: 0px;"
  >
    <div
      style="display: flex; justify-content: space-between;"
    >
      <div>
        LC-ING-1234
      </div>
      <button
        class="ui small button"
        role="button"
      >
        Download
      </button>
    </div>
  </h1>
  .c0 {
  margin-top: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  width: 100%;
  border-top: 1px solid #c0cfde;
  background-color: #f2f5f8;
}

.c1 {
  width: 100%;
  background-color: #f2f5f8;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c2 {
  padding: 16px;
  overflow: auto;
  height: 100%;
  background-color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #c0cfde;
  box-shadow: 0 4px 2px -2px rgba(192,207,222,0.51);
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  background-color: #f2f5f8;
}

.c3.c3.c3.c3 {
  border: 0;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3.c3.c3.c3:hover,
.c3.c3.c3.c3:active,
.c3.c3.c3.c3:visited,
.c3.c3.c3.c3:focus {
  box-shadow: none !important;
}

.c6 {
  padding: 0;
  margin: 8px;
}

.c5 {
  font-weight: bold;
  text-align: left;
  padding-right: 20px;
}

.c4 {
  padding: 30px 0px 30px 0px;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-row-gap: 8px;
}

@media (min-width:68.75em) {
  .c0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    height: 100%;
    overflow: none;
  }
}

@media (min-width:68.75em) {
  .c1 {
    padding: 16px 0 16px 16px;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    height: calc(100vh - 80px);
    margin: 0;
    box-shadow: none;
    width: 400px;
    max-width: 400px;
    min-width: 400px;
  }
}

@media (min-width:68.75em) {
  .c7 {
    max-width: 990px;
    margin-left: auto;
    margin-right: auto;
    padding: 16px;
    height: calc(100vh - 80px);
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          style="display: flex; justify-content: space-between; padding-top: 24px;"
        >
          <div
            class="ui header"
          >
            Application summary
          </div>
        </div>
        <br />
        <a
          class="c3"
          href="/letters-of-credit/1cf0b888-e5ff-47ca-bcf2-b2dc9478b81c/trade"
          target="_blank"
        >
          View trade details
        </a>
        <div
          class="c4"
        >
          <span
            class="c5"
          >
            Status
          </span>
          <span
            data-test-id="status"
          >
            Requested
          </span>
          <span
            class="c5"
          >
            Reference
          </span>
          <span
            data-test-id="reference"
          >
            LC-ING-1234
          </span>
          <span
            class="c5"
          >
            Expiry date
          </span>
          <span
            data-test-id="expire-date"
          >
            2019-11-29
          </span>
          <span
            class="c5"
          >
            Amount
          </span>
          <span
            data-test-id="amount"
          >
            <span
              data-test-id="amount-currency"
            >
              USD
            </span>
             
            <span
              data-test-id="amount-price"
            >
              10,000.00
            </span>
          </span>
          <span
            class="c5"
          />
          <div
            class="c6"
          />
          <span
            class="c5"
          >
            Applicant
          </span>
          <span
            data-test-id="applicant"
          >
            Applicant Name
          </span>
          <span
            class="c5"
          >
            Beneficiary
          </span>
          <span
            data-test-id="beneficiary"
          >
            Beneficiary Name
          </span>
          <span
            class="c5"
          >
            Issuing bank
          </span>
          <span
            data-test-id="issuingbank"
          >
            Issuing Name
          </span>
          <span
            class="c5"
          >
            Issuing bank ref.
          </span>
          <span
            data-test-id="issuing-bank-reference"
          >
            REF-0001
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7"
      height="80px"
    >
      <img
        class="ui image"
        src="data:image/png;base64, iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOs1Vv6HwAE0QJRJ/jTdwAAAABJRU5ErkJggg=="
      />
    </div>
  </div>
</DocumentFragment>
`;
